--- a/level2.html
+++ b/level2.html
@@ -99,8 +99,8 @@
   <code>YmFzZTY0OjpiM0pwWjJsdUxtTnZiUzkzYjJjdVkyOXRJQT09</code>
 
   <div class="hints">
-    <p id="hint2-1" style="display: none;">🧠 Hint 1: Remove the <code>base64::</code> prefix from the decoded string before the second decode.</p>
-    <p id="hint2-2" style="display: none;">🧠 Hint 2: You'll need to decode twice using base64.</p>
+    <p>🧠 Hint 1: Remove the <code>base64::</code> prefix from the decoded string before the second decode.</p>
+    <p>🧠 Hint 2: You'll need to decode twice using base64.</p>
   </div>
   
   <div class="navigation">
