--- a/level3.html
+++ b/level3.html
@@ -86,6 +86,15 @@
       75% { transform: translateX(-10px); }
       100% { transform: translateX(0); }
     }
+    .download-link {
+    color: #FFFFE0; 
+    font-weight: bold;
+    text-decoration: none; 
+  }
+  .download-link:hover {
+    text-decoration: underline;
+    color: #FFFF00;
+  }
   </style>
 </head>
 <body>
