--- a/level3.html
+++ b/level3.html
@@ -87,7 +87,7 @@
       100% { transform: translateX(0); }
     }
     .download-link {
-    color: #FFFFE0; 
+    color: #F0E68C; 
     font-weight: bold;
     text-decoration: none; 
   }
